# My_Intelligence_Pointer_summary

./: CMakeLists.txt
README/: Function Request introduction.md  Function_Request_introduction.md  WeakPtr_Introduction.md
documents/: Fold Expressions.md  SharedPtr.md  Variadic Template Update.md  WeakPtr.md  eason Reasons including Make_series.md
include/: head_files.cpp  headfiles.h
tests/: SharedPtr.cpp  UniquePtr.cpp
total_sources/: Make_Shared.hpp  SharedPtr.hpp  UniquePtr.hpp  WeakPtr.hpp
